--- a/back/central-reserve/internal/infra/primary/http2/docs/swagger.yaml
+++ b/back/central-reserve/internal/infra/primary/http2/docs/swagger.yaml
@@ -328,8 +328,8 @@ paths:
     post:
       consumes:
       - application/json
-      description: Este endpoint permite crear una nueva reserva. Si el cliente no
-        existe, se crea automáticamente.
+      description: Este endpoint permite crear una nueva reserva para una mesa en
+        un restaurante.
       parameters:
       - description: Datos de la reserva
         in: body
