--- a/front/reserve_app/Dockerfile
+++ b/front/reserve_app/Dockerfile
@@ -1,15 +1,11 @@
 # Multi-stage build para React
 FROM node:18-alpine AS builder
 
-# Argumentos de build para variables de entorno
-ARG REACT_APP_API_BASE_URL=REACT_APP_API_BASE_URL_PLACEHOLDER
-ARG REACT_APP_NAME="Reserve App"
-ARG REACT_APP_VERSION="1.0.0"
+# Argumento de build para la URL de la API
+ARG REACT_APP_API_BASE_URL
 
-# Establecer variables de entorno para el build
+# Establecer la variable de entorno para el build
 ENV REACT_APP_API_BASE_URL=${REACT_APP_API_BASE_URL}
-ENV REACT_APP_NAME=${REACT_APP_NAME}
-ENV REACT_APP_VERSION=${REACT_APP_VERSION}
 
 # Establecer directorio de trabajo
 WORKDIR /app
@@ -18,7 +14,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Instalar dependencias
-RUN npm ci --only=production
+RUN npm ci
 
 # Copiar el código fuente
 COPY . .
@@ -35,14 +31,8 @@ COPY --from=builder /app/build /usr/share/nginx/html
 # Copiar configuración personalizada de nginx
 COPY nginx.conf /etc/nginx/nginx.conf
 
-# Crear script para reemplazar variables de entorno en tiempo de ejecución
-RUN apk add --no-cache bash
-COPY docker-entrypoint.sh /docker-entrypoint.sh
-RUN chmod +x /docker-entrypoint.sh
-
 # Exponer puerto 80
 EXPOSE 80
 
-# Usar script personalizado como entrypoint
-ENTRYPOINT ["/docker-entrypoint.sh"]
+# Usar nginx como entrypoint
 CMD ["nginx", "-g", "daemon off;"] 
