--- a/front/reserve_app/nginx.conf
+++ b/front/reserve_app/nginx.conf
@@ -51,15 +51,15 @@ http {
         root /usr/share/nginx/html;
         index index.html index.htm;
 
+        # Configuración para archivos estáticos
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|json)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
         # Configuración para SPA (Single Page Application)
         location / {
             try_files $uri $uri/ /index.html;
-        }
-
-        # Cache para archivos estáticos
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
         }
 
         # Configuración de seguridad
