--- a/infra/docker-compose.aws-fixed.yaml
+++ b/infra/docker-compose.aws-fixed.yaml
@@ -1,15 +1,20 @@
 services:
   frontend:
-    image: public.ecr.aws/d3a6d4r1/cam/reserve:frontend-v1.1
-    ports:
-      - "8081:80"
-    environment:
-      - REACT_APP_API_BASE_URL=http://central-reserve:3050
-
-  website:
-    image: public.ecr.aws/d3a6d4r1/cam/reserve:website-latest
+    image: public.ecr.aws/d3a6d4r1/cam/reserve:frontend-latest
+    container_name: frontend_prod
     ports:
       - "8080:80"
+    environment:
+      - REACT_APP_API_BASE_URL=${REACT_APP_API_BASE_URL:-http://localhost:3050}
+      - REACT_APP_NAME=${REACT_APP_NAME:-Reserve App}
+      - REACT_APP_VERSION=${REACT_APP_VERSION:-1.0.0}
+      - NODE_ENV=production
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:80/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     networks:
       - app-network
     depends_on:
@@ -17,7 +22,7 @@ services:
 
   central_reserve:
     image: public.ecr.aws/d3a6d4r1/cam/reserve:backend-latest
-    container_name: central_reserve_dev
+    container_name: central_reserve_prod
     environment:
       - DB_HOST=postgres
       - DB_PORT=5432
@@ -48,7 +53,7 @@ services:
 
   postgres:
     image: postgres:15-alpine
-    container_name: postgres_dev
+    container_name: postgres_prod
     environment:
       POSTGRES_DB: ${DB_NAME:-central_reserve}
       POSTGRES_USER: ${DB_USER:-postgres}
@@ -57,14 +62,13 @@ services:
       - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     restart: unless-stopped
     networks:
       - app-network
 
   db_migrator:
     image: public.ecr.aws/d3a6d4r1/cam/reserve:migrator-latest
-    container_name: db_migrator_dev
+    container_name: db_migrator_prod
     environment:
       - DB_HOST=postgres
       - DB_PORT=5432
