fix: website ahora usa URL correcta del backend en producción (3.220.183.29:3050)

--- a/front/website/nginx.conf
+++ b/front/website/nginx.conf
@@ -15,10 +15,10 @@ server {
     }
 
     # Reverse Proxy para las llamadas a la API
-    # Todas las peticiones que empiecen con /api/ se redirigen al backend.
-    location /api/ {
+    # Todas las peticiones que empiecen con /v1/ se redirigen al backend.
+    location /v1/ {
         # El nombre 'central_reserve' es el nombre del servicio en docker-compose
-        proxy_pass http://central_reserve:3050;
+        proxy_pass http://central_reserve:3050/api/v1/;
         
         # Cabeceras importantes para el proxy
         proxy_set_header Host $host;
